<resources>
    <string name="app_name">am_calculadora</string>
    <string name="calc_display">0</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_decimalpt">.</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_divide">/</string>
    <string name="btn_product">X</string>
    <string name="btn_result">=</string>
    <string name="btn_delete">Del</string>
    <string name="btn_misc">¿?</string>
</resources>