<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/calc_display"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@empty"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_nine"
        android:textColor="#ffffff"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_product"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_two"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        app:layout_constraintTop_toTopOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_zero"
        app:layout_constraintEnd_toEndOf="@+id/btn_two"
        app:layout_constraintStart_toStartOf="@+id/btn_one"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_one"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_three"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_six"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_four"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF8709"
        android:text="@string/btn_seven"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete"
        android:onClick="numberTapped" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_eight"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_seven"
        app:layout_constraintTop_toTopOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8709"
        android:onClick="numberTapped"
        android:text="@string/btn_five"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toStartOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_four"
        app:layout_constraintTop_toTopOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:text="@string/btn_result"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="@+id/btn_sub"
        app:layout_constraintTop_toTopOf="@+id/btn_decimalpt" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:onClick="operationTapped"
        android:text="@string/btn_subtract"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_three" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:onClick="operationTapped"
        android:text="@string/btn_add"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_six"
        app:layout_constraintTop_toTopOf="@+id/btn_six" />

    <Button
        android:id="@+id/btn_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:onClick="operationTapped"
        android:text="@string/btn_product"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_nine" />

    <Button
        android:id="@+id/btn_decimalpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:text="@string/btn_decimalpt"
        android:textColor="#e84043"
        app:layout_constraintStart_toStartOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_zero" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:backgroundTint="#f8f8ff"
        android:text="@string/btn_delete"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:onClick="operationTapped"
        android:text="@string/btn_divide"
        android:textColor="#e84043"
        app:layout_constraintEnd_toEndOf="@+id/btn_product"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_product"
        app:layout_constraintTop_toTopOf="@+id/btn_misc" />

    <Button
        android:id="@+id/btn_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f8f8ff"
        android:text="@string/btn_misc"
        android:textColor="#e84043"
        app:layout_constraintEnd_toStartOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete"
        app:layout_constraintTop_toTopOf="@+id/btn_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>